# glrs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: import.rs  structs.glsl
src/: convert.rs  lib.rs
tests/: structs.glsl  test_structs.rs
