[package]
name = "glrs"
version = "0.1.0"
edition = "2021"
authors = ["Raphaël Duhen <raphael.duhen@gmail.com>"]
categories = ["graphics", "development-tools"]
description = "Macros for padding-equivalent importing of OpenGL constructs"
documentation = "https://docs.rs/glrs"
keywords = ["macros"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/HoloTheDrunk/glrs"
rust-version = "1.75"

[lib]
proc-macro = true

[dependencies]
glam = "0.25.0"
glsl = "7.0.0"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.76"
quote = "1.0.35"
syn = { version = "2.0.48", features = ["full"] }
syn-path = "2.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
